--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "summarize-markdown",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Summarize markdown into a simple text string",
-  "author": "Bryan Burgers <bryan@burgers.io>",
+  "author": {
+    "name": "Bryan Burgers",
+    "email": "bryan@burgers.io",
+    "url": "http://burgers.io"
+  },
   "main": "index.js",
   "keywords": [
     "markdown",
