--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "bryanburgers/summarize-markdown"
   },
   "dependencies": {
+    "ent": "~0.1.0",
     "marked": "~0.3"
   },
   "devDependencies": {
